REG : Non focusable frame can be minimized to very small & Frame icon can be seen on frame buttons.

XMLWordPrintable

    • b02
    • 7
    • b25
    • x86
    • windows_xp
    • Not verified

      I have a non focusable frame, when i resize the frame i can see that frame icon goes over the minimize , maximize & close button. I can resize the frame to very small & infact we can make the frame to invisible on the frame by resizing.

      The same behaviour can be seen from 1.4.2 onwards till jdk1.6.0 b40 ( the build i had ). But some how the problem is not seen jdk1.6.0 b48 ( the build i had) to jdk1.7.0 b01, But the problem is seen from jdk1.7.0 b02 onwards. Hence this is a regression from jdk1.6 to jdk1.7 . The bug is not reproducable even jdk1.6.0 update releases , not only that http://monaco.sfbay/detail.jsf?cr=4980161 is also not seen. but the http://monaco.sfbay/detail.jsf?cr=4980161 is once again seen from jdk1.7.0 b02 onwards. But it got fixed in jdk1.7.0_b17 pit build.

      The bug is reproduce only when the frame is non-focusable.

      Step to reproduce:
      ------------------
      1) Run the attached testcase.
      java WindowStateTest <0/1>
      0 - set focusable window state to true
      1 - set focusable window state to false

      Pass "1" as the argument.
      2)A frame will be shown.
      3) Click on the maximize button , so that the frame is maximized.
      4) Move the mouse to the right buttom of the frame & try resizing the frame.
      Observe that frame icon (java cup) is seen on the frame buttons & resizing it to further the frame is not seen on the screen. If you see the same then the bug is reproduced.

            Assignee:
            Anthony Petrov (Inactive)
            Reporter:
            Lawrence Premkumar1 (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: