6581927: REG : Non focusable frame can be minimized to very small & Frame icon can be seen on frame buttons

The SWP_NOSENDCHANGING flag should not be passed to the ::SetWindowPos() WinAPI function when we receive the WM_MOUSEMOVE message while manually handling the resizing of non-focusable frames.

Reviewed-by: son, ant